8343502: RISC-V: SIGBUS in updateBytesCRC32 after JDK-8339738

Reviewed-by: mli, fjiang